@@ -78,6 +78,9 @@ module Fairy
 ##CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 # CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
 
+##CONF.MARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
+##CONF.MARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
+
 ##CONF.SORTEDQUEUE_POOL_THRESHOLD = CONF.POOLQUEUE_POOL_THRESHOLD
 #CONF.SORTEDQUEUE_POOL_THRESHOLD = 1000
 ##CONF.SORTEDQUEUE_THRESHOLD = 10000/2
@@ -172,7 +175,7 @@ CONF.HASH_OPTIMIZE = true
 ##CONF.DEBUG_PORT_WAIT = false
 ##CONF.DEBUG_FULL_BACKTRACE = false
 ##CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = false
-# CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
+ CONF.DEBUG_THREAD_ABORT_ON_EXCEPTION = true
 ##CONF.DEBUG_MONITOR_ON = false
 #CONF.DEBUG_MONITOR_ON = true
 ##CONF.DEBUG_PROCESSOR_TRACE_ON = false
