@@ -36,7 +36,7 @@ module Fairy
       end
 
       def create_import(processor)
-	policy = @opts[:postfiler_prequeuing_policy]
+	policy = @opts[:postfilter_prequeuing_policy]
 	policy ||= @opts[:prequeuing_policy]
 	
 	processor.create_import(policy)
