@@ -103,6 +103,9 @@ module Fairy
     def_prop :ONMEMORY_SIZEDQUEUE_SIZE
     def_prop :FILEBUFFEREDQUEUE_THRESHOLD
 
+    def_prop :MARSHAL_QUEUE_CHUNK_SIZE
+    def_prop :MARSHAL_QUEUE_MIN_CHUNK_NO
+
     def_prop :SORTEDQUEUE_POOL_THRESHOLD
     def_prop :SORTEDQUEUE_THRESHOLD
     def_prop :SORTEDQUEUE_SORTBY
@@ -270,6 +273,9 @@ module Fairy
   DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD = 10000
   DEFAULT_CONF.ONMEMORY_SIZEDQUEUE_SIZE = 10000
   DEFAULT_CONF.FILEBUFFEREDQUEUE_THRESHOLD = 10000/2
+
+  DEFAULT_CONF.MARSHAL_QUEUE_CHUNK_SIZE = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
+  DEFAULT_CONF.MARSHAL_QUEUE_MIN_CHUNK_NO = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   
   DEFAULT_CONF.SORTEDQUEUE_POOL_THRESHOLD = DEFAULT_CONF.POOLQUEUE_POOL_THRESHOLD
   DEFAULT_CONF.SORTEDQUEUE_THRESHOLD = 10000/2
