@@ -67,6 +67,8 @@ module Fairy
       def_exception :ShouldDefineSubclass, "サブクラスで定義してください"
 
       def_exception :ShouldNotSetInput, "インプットフィルタ(%s)にはinputを設定出来ません"
+
+      def_exception :MarshalQueueNotEmpty, "Marshal queue は Emptyでなくてはなりません"
     end
   end
 
