@@ -1,3 +1,11 @@
+Tue Jun  1 17:22:15 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* port.rb, exception.rb, conf.rb: MershaledQueue対応(REQ#232)
+	* port-marshaled-queue.rb: MershaledQueue対応での追加
+	
+	* b-mod-group-by.rb: オプションpostfilter_prequeuing_policyの設定
+	  が出来てなかった
+
 Wed May 26 17:48:06 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port.rb: FileBufferdQueue#{store_2ndmemory,restore_2ndmemory}を最適化
